app/gateway-oss/2.2.x/index.md
---
title: Documentation for Kong Gateway (OSS)
is_homepage: true
---

<div class="docs-grid">
  <div class="docs-grid-block">
    <h3><a href="https://konghq.com/install/#kong-community">Installation</a></h3>
    <p>You can install {{site.ce_product_name}} on most Linux distributions and MacOS. We even provide the source so you can compile it yourself.</p>
    <a href="https://konghq.com/install/#kong-community">Install {{site.ce_product_name}} &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/getting-started-guide/{{ page.kong_version}}/overview/">Getting Started</a></h3>
    <p>Whether you’re an open-source or a {{site.konnect_product_name}}
    user, use this guide to familiarize yourself with API gateway concepts and
    learn how to use important features and capabilities.</p>
    <a href="/getting-started-guide/{{ page.kong_version}}/overview/">Get started &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/db-less-and-declarative-config">DB-less &amp; Declarative Configuration</a></h3>
    <p>Learn how to leverage the declarative configuration format for using {{site.ce_product_name}} without a database, using in-memory storage only.</p>
    <a href="/gateway-oss/{{page.kong_version}}/db-less-and-declarative-config">Read the tutorial &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/kong-for-kubernetes/">Kong for Kubernetes</a></h3>
    <p>Get Started with Kong for Kubernetes.</p>
    <a href="/gateway-oss/{{page.kong_version}}/kong-for-kubernetes/">Learn More &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/upgrading">Upgrade Guide</a></h3>
    <p>Already using {{site.ce_product_name}}, and wanting to upgrade? Here's the step-by-step guide.</p>
    <a href="/gateway-oss/{{page.kong_version}}/upgrading">Read the upgrade guide &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/getting-started/quickstart">5-Minute Quickstart Guide</a></h3>
    <p>Check out this guide if you just need the absolute basics: start {{site.ce_product_name}}, add a Service, enable plugins, and add consumers.</p>
    <a href="/gateway-oss/{{page.kong_version}}/getting-started/quickstart">Start using {{site.ce_product_name}} &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/configuration">Configuration Reference</a></h3>
    <p>Want to further optimize your {{site.ce_product_name}} cluster, database, or configure NGINX? Dive into the configuration.</p>
    <a href="/gateway-oss/{{page.kong_version}}/configuration">Start configuration &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/cli">CLI Reference</a></h3>
    <p>Want a better understanding of the CLI tool and its options? Browse the detailed command reference.</p>
    <a href="/gateway-oss/{{page.kong_version}}/cli">Use the CLI &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/admin-api">Admin API Reference</a></h3>
    <p>Ready to learn the underlying interface? Browse the Admin API reference to learn how to start making requests.</p>
    <a href="/gateway-oss/{{page.kong_version}}/admin-api">Explore the interface &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/proxy">Proxy Reference</a></h3>
    <p>Learn every way to configure proxies for your Services, serve them over SSL, or use WebSockets.</p>
    <a href="/gateway-oss/{{page.kong_version}}/proxy">Read the Proxy Reference &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/loadbalancing">Load Balancing Reference</a></h3>
    <p>Learn how to load balance traffic through replicas of your upstream services.</p>
    <a href="/gateway-oss/{{page.kong_version}}/loadbalancing">Read the Load balancing Reference &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/health-checks-circuit-breakers">Health Checks &amp; Circuit Breakers</a></h3>
    <p>Let the gateway monitor the availability of your services and adjust its load balancing accordingly.</p>
    <a href="/gateway-oss/{{page.kong_version}}/health-checks-circuit-breakers">Learn about health checks and circuit breakers &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/clustering">Clustering</a></h3>
    <p>If you are starting more than one node, you must use clustering to make sure all the nodes belong to the same cluster.</p>
    <a href="/gateway-oss/{{page.kong_version}}/clustering">Read the clustering reference &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/plugin-development">Write Your Own Plugins</a></h3>
    <p>Looking for something {{site.ce_product_name}} does not do for you? Easy: write it as a plugin. Learn how to write your own plugins for {{site.ce_product_name}}.</p>
    <a href="/gateway-oss/{{page.kong_version}}/plugin-development">Read the plugin development guide &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/go">Go Plugins</a></h3>
    <p>You can also write plugins using the Go programming language. Here's how to get started.</p>
    <a href="/gateway-oss/{{page.kong_version}}/go">Read the guide &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/gateway-oss/{{page.kong_version}}/hybrid-mode">Hybrid Mode</a></h3>
    <p>Get started with Hybrid Mode, through which you can configure nodes with dedicated roles: you can have Control Plane nodes using a database and Data Plane nodes using DB-less mode.</p>
    <a href="/gateway-oss/{{page.kong_version}}/hybrid-mode">Read the tutorial &rarr;</a>
  </div>

</div>
